# agent4da

./: .env.example  .gitignore  .gitkeep  GOLD_DES.md  Makefile  PROJECT.md  README.md  Team-3-Solution-Design-Specification(1).docx  agent4da.env.yml  docker-compose.agent.yml  docker-compose.airflow.yml  docker-compose.app.yml  docker-compose.frontend.yml  docker-compose.kafka.yml  docker-compose.minio.yml  docker-compose.monitoring.yml  docker-compose.postgre.yml  docker-compose.postgres.yml  docker-compose.redis.yml  docker-compose.spark.yml  docker-compose.trino.yml  docker-compose.yml
app/backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  trino_client.py
app/backend/agent/: cancellation.py  contextual_learning.py  router.py  schemas.py  service.py
app/backend/api/: __init__.py  agent.py  auth.py  cache.py  catalog.py  db.py  deps.py  errors.py  history.py  integrations.py  logging.py  main.py  metrics.py  obs_metrics.py  ops.py  pipelines.py  settings.py  settings_routes.py
app/backend/auth/: deps.py  router.py  schemas.py  service.py
app/backend/catalog/: router.py  schemas.py  service.py
app/backend/chart/: heuristics.py
app/backend/db/: base.py  models.py
app/backend/history/: router.py  schemas.py
app/backend/metrics/: __init__.py  queries.py  router.py  schemas.py
app/backend/ops/: health.py  scheduler.py
app/backend/pipelines/: airflow_client.py  router.py  schemas.py  service.py
app/backend/quickstats/: queries.py  router.py
app/backend/scripts/: entrypoint.sh  seed_admin.py
app/backend/settings_router/: router.py  schemas.py
app/backend/tests/: test_agent_sessions.py  (+4 more)
(+298 files in other folders)
